fix issues with channel colors
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6525 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
+++ b/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
@@ -45,20 +45,15 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                  <Component id="statusLineLabel" alignment="0" max="32767" attributes="1"/>
-                  <Component id="showFolderButton" alignment="0" max="32767" attributes="1"/>
-                  <Component id="saveButton" alignment="0" max="32767" attributes="1"/>
-                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                      <Component id="fpsLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="fpsField" alignment="3" max="32767" attributes="1"/>
-                  </Group>
-                  <Component id="abortButton" alignment="0" max="32767" attributes="1"/>
-                  <Component id="pauseAndResumeToggleButton" alignment="0" max="32767" attributes="1"/>
-              </Group>
-              <EmptySpace max="32767" attributes="0"/>
+          <Component id="statusLineLabel" alignment="0" pref="28" max="32767" attributes="1"/>
+          <Component id="showFolderButton" alignment="0" max="32767" attributes="1"/>
+          <Component id="saveButton" alignment="0" max="32767" attributes="1"/>
+          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+              <Component id="fpsLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Component id="fpsField" alignment="3" max="32767" attributes="1"/>
           </Group>
+          <Component id="abortButton" alignment="0" max="32767" attributes="1"/>
+          <Component id="pauseAndResumeToggleButton" alignment="0" max="32767" attributes="1"/>
       </Group>
     </DimensionLayout>
   </Layout>
